--- a/content/guides/fonctionnement-chargeur-rapide.mdx
+++ b/content/guides/fonctionnement-chargeur-rapide.mdx
@@ -18,8 +18,10 @@ schemaType: "Article"
 Pourquoi certains chargeurs rechargent-ils 50 % d’un smartphone en 30 minutes quand d’autres stagnent ? Tout se joue dans la coordination entre tension (volts), courant (ampères) et puissance (watts), orchestrée par des protocoles comme USB Power Delivery (PD). Ce guide explique, étape par étape, la logique d’un chargeur rapide moderne, le rôle de la négociation avec le smartphone et les réflexes à adopter pour préserver la batterie.
 
 <Callout type="info">
-La vitesse de charge dépend du trio smartphone + chargeur + câble. Dès qu’un maillon limite la puissance, la charge redevient standard.
+La vitesse de charge dépend du trio smartphone + chargeur + câble. Dès qu'un maillon limite la puissance, la charge redevient standard.
 </Callout>
+
+![Explication charge](/images/explication_charge.png)
 
 ## Volts, ampères, watts
 
