--- a/content/guides/comment-charger-telephone-plus-vite.mdx
+++ b/content/guides/comment-charger-telephone-plus-vite.mdx
@@ -7,7 +7,7 @@ updated: "2025-01-27"
 author: "Rédaction"
 category: "guides"
 tags: ["charge rapide","smartphone","batterie","astuces","optimisation"]
-cover: "/images/covers/guide-chargeur-rapide.jpg"
+cover: "/images/charge-eclair.png"
 readingTime: 8
 toc: true
 schemaType: "Article"
