--- a/content/guides/laisser-telephone-charge-toute-nuit.mdx
+++ b/content/guides/laisser-telephone-charge-toute-nuit.mdx
@@ -7,7 +7,7 @@ updated: "2025-01-27"
 author: "Rédaction"
 category: "guides"
 tags: ["charge nocturne","batterie","smartphone","sécurité","durée de vie"]
-cover: "/images/smartphone-1641906_1280.jpg"
+cover: "/images/charger nuit.jpg"
 readingTime: 9
 toc: true
 schemaType: "Article"
@@ -18,8 +18,6 @@ Vous branchez votre téléphone avant de dormir, vous le retrouvez à 100 % le m
 La réponse courte : **oui, vous pouvez laisser votre téléphone en charge toute la nuit sans risque majeur**, à condition d'utiliser du matériel fiable et de respecter quelques règles simples. En revanche, ce n'est pas totalement neutre pour la durée de vie de la batterie si vous le faites dans de mauvaises conditions.
 
 Dans ce guide, on détaille ce qui se passe vraiment quand un smartphone reste branché pendant des heures, et comment limiter l'impact sur la batterie.
-
-![Chargement de téléphone la nuit](/images/charger%20nuit.jpg)
 
 ## Ce qui se passe quand le téléphone reste branché toute la nuit
 
