--- a/content/chargeurs/chargeur-usb-c-65w.mdx
+++ b/content/chargeurs/chargeur-usb-c-65w.mdx
@@ -25,6 +25,15 @@ Concrètement, un bon chargeur USB-C 65 W permet de :
 
 C'est donc un format polyvalent : un seul bloc peut remplacer plusieurs chargeurs et alléger considérablement votre sac.
 
+<div className="my-6 rounded-2xl border border-primary/20 bg-primary/5 p-5">
+  <p className="mb-3 text-base font-semibold text-textStrong">Résumé : nos 3 chargeurs 65 W recommandés</p>
+  <ul className="space-y-1 text-sm text-textMain">
+    <li>→ <a href="#anker-nano-ii-65w" className="font-medium text-primary hover:underline">Anker Nano II 65 W</a> — Le plus compact, idéal pour voyager léger</li>
+    <li>→ <a href="#ugreen-nexode-65w" className="font-medium text-primary hover:underline">UGREEN Nexode 65 W</a> — Multi-ports, parfait pour PC + smartphone</li>
+    <li>→ <a href="#baseus-65w" className="font-medium text-primary hover:underline">Baseus 65 W</a> — Meilleur rapport qualité/prix</li>
+  </ul>
+</div>
+
 ---
 
 ## Les critères essentiels pour bien choisir
@@ -95,32 +104,37 @@ Un câble inadapté peut limiter la puissance, voire interrompre la charge.
 
 ## Notre sélection de chargeurs USB-C 65 W
 
-> 💡 **Transparence** : les liens ci-dessous sont des liens affiliés. Cela ne change rien pour vous, mais aide à financer le site.
+<p className="mb-6 text-xs text-slate-400">Les liens ci-dessous sont des liens affiliés. Cela ne change rien pour vous, mais aide à financer le site.</p>
 
-### Anker Nano II 65 W
-- **Type** : chargeur GaN, 1 port USB-C
-- **Idéal pour** : ultraportables et smartphones récents
-- **Points forts** : format très compact, compatibilité large, excellente gestion thermique
+<div id="anker-nano-ii-65w" className="mb-6 rounded-2xl border border-border bg-bgSubtle p-5">
+  <h3 className="mb-3 text-lg font-semibold text-textStrong">Anker Nano II 65 W</h3>
+  <ul className="mb-4 space-y-1 text-sm text-textMain">
+    <li><span className="font-medium text-slate-500">Type :</span> Chargeur GaN ultra-compact, 1 port USB-C</li>
+    <li><span className="font-medium text-slate-500">Idéal pour :</span> Ultraportables et smartphones récents</li>
+    <li><span className="font-medium text-slate-500">Points forts :</span> Format de poche, compatibilité large, excellente gestion thermique</li>
+  </ul>
+  <a href="https://amzn.to/4pIjPeH" target="_blank" rel="noopener noreferrer nofollow" className="inline-block rounded-lg bg-primary px-5 py-2.5 text-sm font-medium text-white transition-colors hover:bg-primaryHover">Voir le prix sur Amazon</a>
+</div>
 
-[Voir sur Amazon](https://amzn.to/4pIjPeH)
+<div id="ugreen-nexode-65w" className="mb-6 rounded-2xl border border-border bg-bgSubtle p-5">
+  <h3 className="mb-3 text-lg font-semibold text-textStrong">UGREEN Nexode 65 W</h3>
+  <ul className="mb-4 space-y-1 text-sm text-textMain">
+    <li><span className="font-medium text-slate-500">Type :</span> Chargeur GaN multi-ports (2-3 USB-C + USB-A)</li>
+    <li><span className="font-medium text-slate-500">Idéal pour :</span> PC portable + smartphone, ou plusieurs appareils</li>
+    <li><span className="font-medium text-slate-500">Points forts :</span> Polyvalent, bonne répartition de puissance, parfait pour le voyage</li>
+  </ul>
+  <a href="https://amzn.to/49xq8wK" target="_blank" rel="noopener noreferrer nofollow" className="inline-block rounded-lg bg-primary px-5 py-2.5 text-sm font-medium text-white transition-colors hover:bg-primaryHover">Voir le prix sur Amazon</a>
+</div>
 
----
-
-### UGREEN Nexode 65 W
-- **Type** : chargeur GaN, 2-3 ports (USB-C + USB-A)
-- **Idéal pour** : PC + smartphone ou plusieurs appareils
-- **Points forts** : multi-ports, bonne répartition de puissance, parfait pour le voyage
-
-[Voir sur Amazon](https://amzn.to/49xq8wK)
-
----
-
-### Baseus 65 W
-- **Type** : chargeur multi-ports 65 W
-- **Idéal pour** : charge tout-en-un à la maison ou au bureau
-- **Points forts** : plusieurs ports, excellent rapport qualité/prix
-
-[Voir sur Amazon](https://amzn.to/4ocnVKx)
+<div id="baseus-65w" className="mb-6 rounded-2xl border border-border bg-bgSubtle p-5">
+  <h3 className="mb-3 text-lg font-semibold text-textStrong">Baseus 65 W</h3>
+  <ul className="mb-4 space-y-1 text-sm text-textMain">
+    <li><span className="font-medium text-slate-500">Type :</span> Chargeur multi-ports 65 W</li>
+    <li><span className="font-medium text-slate-500">Idéal pour :</span> Charge tout-en-un à la maison ou au bureau</li>
+    <li><span className="font-medium text-slate-500">Points forts :</span> Plusieurs ports, excellent rapport qualité/prix, fiable</li>
+  </ul>
+  <a href="https://amzn.to/4ocnVKx" target="_blank" rel="noopener noreferrer nofollow" className="inline-block rounded-lg bg-primary px-5 py-2.5 text-sm font-medium text-white transition-colors hover:bg-primaryHover">Voir le prix sur Amazon</a>
+</div>
 
 ---
 
