--- a/content/mobilite/co-valence-fr-mobilite-electrique.mdx
+++ b/content/mobilite/co-valence-fr-mobilite-electrique.mdx
@@ -7,7 +7,7 @@ updated: "2026-01-18"
 author: "Rédaction"
 category: "mobilite"
 tags: ["co valence","Valence","mobilité électrique","bornes","recharge"]
-cover: "/images/covers/co-valence-mobilite.jpg"
+cover: "/images/covers/co-valence-mobilite.svg"
 readingTime: 12
 toc: true
 schemaType: "Article"
