--- a/content/entreprise/zone-business-fr.mdx
+++ b/content/entreprise/zone-business-fr.mdx
@@ -7,7 +7,7 @@ updated: "2026-02-11"
 author: "Rédaction"
 category: "entreprise"
 tags: ["zone-business.fr", "plateforme business", "ressources entrepreneurs", "outils entreprise", "développement business"]
-cover: "/images/covers/zone-business-fr.jpg"
+cover: "/images/covers/image_zone_business.png"
 readingTime: 8
 toc: true
 schemaType: "Article"
