--- a/content/guides/sabradou-trouver-chargeurs.mdx
+++ b/content/guides/sabradou-trouver-chargeurs.mdx
@@ -7,7 +7,7 @@ updated: "2026-01-18"
 author: "Rédaction"
 category: "guides"
 tags: ["sabradou","chargeurs","accessoires","shopping","deals"]
-cover: "/images/covers/sabradou-chargeurs.svg"
+cover: "/images/covers/image_sabradou.png"
 readingTime: 11
 toc: true
 schemaType: "HowTo"
