--- a/content/mobilite/trackr-fr-tech-localisation.mdx
+++ b/content/mobilite/trackr-fr-tech-localisation.mdx
@@ -7,7 +7,7 @@ updated: "2026-01-18"
 author: "Rédaction"
 category: "mobilite"
 tags: ["trackr","GPS","localisation","bluetooth","tech"]
-cover: "/images/covers/trackr-tech.svg"
+cover: "/images/covers/image_tracker.png"
 readingTime: 9
 toc: true
 schemaType: "Article"
